them upload va download cho product
